Funciones para JS + gradiente boton

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
 
 <div id="pokeHeader" class="header" >
-      <a href="https://fontmeme.com/pokemon-go-font/"><img src="https://fontmeme.com/permalink/191204/14f02719d469a2ffd2bef789f2a013fc.png" id="datamonGoStyle" alt="pokemon-go-font" width="450" height="100"></a>
+      <a href="#"><img src="https://fontmeme.com/permalink/191204/14f02719d469a2ffd2bef789f2a013fc.png" id="datamonGoStyle" alt="pokemon-go-font" width="450" height="100"></a>
   </div>
   <div id="upperBar" class="barraSup">
     <nav class="barraNav">
@@ -20,6 +20,7 @@
       <button id="pokeTypesBtn" class="pokeTypesStyle">Tipo</button>
       <button id="pokeWeakBtn" class="pokeWeakStyle">Debilidades</button>
       <button id="pokeAboutBtn" class="pokeAboutStyle">Pokémon Go</button>
+      <input id="pokeSearch" class="pokeSearchStyle" type="text" placeholder="Buscar...">
     </nav>
 </div>
 
@@ -62,5 +63,6 @@
 <!--Barra superior-->
 
     <script type="module" src="main.js"></script>
+    <script type="module" src="data.js"></script>
   </body>
 </html>
