Muetra pokemons en pantalla y se da estilo a CARDS

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es"> 
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/FAVICON.ico">
 </head>
 
 <body>
@@ -37,8 +38,8 @@
 
   <div id="secondPage">
 
-    <select id="select"> 
-      <option value="">Tipo</option> 
+    <select id="select">
+      <option value="">Tipo</option>
       <option value="Water">Agua</option>
       <option value="Bug">Bicho</option>
       <option value="Dragon">Dragón</option>
@@ -46,20 +47,19 @@
       <option value="Ghost">Fantasma</option>
       <option value="Fire">Fuego</option>
       <option value="Ice">Hielo</option>
+      <option value="Normal">Normal</option>
       <option value="Fighting">Pelea</option>
-      <option value="Grass">Planta</option> 
+      <option value="Grass">Planta</option>
       <option value="Psychic">Psíquicos</option>
-      <option value="Rock">Roca</option> 
+      <option value="Rock">Roca</option>
       <option value="Ground">Tierra</option>
       <option value="Poison">Veneno</option>
       <option value="Flying">Volador</option>
-     
-  </select> 
-  <button id="filterTypeButton2">filtrar</button>
-  <section id="contentOfCards">
-    <h3>Carta</h3>
-  </section>
 
+    </select>
+    <button id="filterTypeButton">GO</button>
+    <section id="contentOfCards"></section>
+          
     <select name="number" id="pokeNumber">
       <option value="mayorMenor">Mayor a menor</option>
       <option value="menorMayor">Menor a mayor</option>
