Cambio de logo y avances en CSS

--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
   <div id="root"></div>
 
   <div id="pokeHeader" class="header">
-    <a href="#"><img src="https://fontmeme.com/permalink/191204/14f02719d469a2ffd2bef789f2a013fc.png"
-        id="datamonGoStyle" alt="pokemon-go-font" width="450" height="100"></a>
+      <img id="pokeLogo" class="logoStyle" src="images/LOGO.png" alt="logo">
+
   </div>
   <div id="upperBar" class="barraSup">
     <nav class="barraNav">
-      <button id="pokeHomeBtn" class="pokeHomeStyle">HOME</button>
-      <button id="pokeTypesBtn" class="pokeTypesStyle">Tipo</button>
-      <button id="pokeWeakBtn" class="pokeWeakStyle">Debilidades</button>
-      <button id="pokeAboutBtn" class="pokeAboutStyle">Pokémon Go</button>
+      <button id="pokeHomeBtn" class="pokeButtonNav">HOME</button>
+      <button id="pokeTypesBtn" class="pokeButtonNav">Tipo</button>
+      <button id="pokeWeakBtn" class="pokeButtonNav">Debilidades</button>
+      <button id="pokeAboutBtn" class="pokeButtonNav">Pokémon Go</button>
       <input id="pokeSearch" class="pokeSearchStyle" type="text" placeholder="Buscar...">
     </nav>
   </div>
@@ -32,14 +32,14 @@
     <div id="pokemonImageUp" class="pokeImageDiv">
       <img id=pokePicFirst class="pokeImageFirstStyle" src="images/allPokemons.jpg" alt="allPokemons" width="900"
         height="300">
-      <button id="elegirPokeBtn" class="pokeElegir">¿Cuál Pokemon vas a elegir?</button>
+      <button id="elegirPokeBtn" class="pokeElegir">¡Busca el pokémon que necesitas!</button>
     </div>
   </div>
 
   <div id="secondPage">
 
-    <select id="select">
-      <option value="">Tipo</option>
+    <select id="select1">
+      <option value="">Filtrar por tipo</option>
       <option value="Water">Agua</option>
       <option value="Bug">Bicho</option>
       <option value="Dragon">Dragón</option>
@@ -52,26 +52,28 @@
       <option value="Grass">Planta</option>
       <option value="Psychic">Psíquicos</option>
       <option value="Rock">Roca</option>
-      <option value="Ground">Tierra</option>
+      <option alue="Ground">Tierra</option>
       <option value="Poison">Veneno</option>
       <option value="Flying">Volador</option>
-
     </select>
     <button id="filterTypeButton">GO</button>
-    <section id="contentOfCards"></section>
-          
-    <select name="number" id="pokeNumber">
-      <option value="mayorMenor">Mayor a menor</option>
-      <option value="menorMayor">Menor a mayor</option>
-    </select>
-    <select name="names" id="pokeNames">
-      <option value="aToZ">A-Z</option>
-      <option value="zToA">Z-A</option>
-    </select>
-    <label for="searching">Buscar</label><input type="searchBar">
-    <div id="allPokemons">
 
+    <select name="names" id="select2">
+      <option value="aToZ">Ordenar por nombre</option>
+      <option value="aToZ">De la A a la Z</option>
+      <option value="zToA">De la Z a la A</option>
+    </select>
+
+    <select name="number" id="select3">
+      <option value="mayorMenor">Ordenar por N°</option>
+      <option value="mayorMenor">De menor a mayor</option>
+      <option value="menorMayor">De mayor a menor</option>
+    </select>
+
+    <div id="allPokemons">
+      <section id="contentOfCards"></section>
     </div>
+    
     <div id="container"></div>
   </div>
 
