Filtrando y ordenando data

--- a/src/index.html
+++ b/src/index.html
@@ -56,18 +56,18 @@
       <option value="Poison">Veneno</option>
       <option value="Flying">Volador</option>
     </select>
-    <button id="filterTypeButton">GO</button>
+
 
     <select name="names" id="select2">
-      <option value="aToZ">Ordenar por nombre</option>
+      <option value="">Ordenar por nombre</option>
       <option value="aToZ">De la A a la Z</option>
       <option value="zToA">De la Z a la A</option>
     </select>
 
     <select name="number" id="select3">
-      <option value="mayorMenor">Ordenar por N°</option>
-      <option value="mayorMenor">De menor a mayor</option>
-      <option value="menorMayor">De mayor a menor</option>
+      <option value="">Ordenar por N°</option>
+      <option value="mayorMenor">De mayor a menor</option>
+      <option value="menorMayor">De menor a mayor</option>
     </select>
 
     <div id="allPokemons">
