--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Data Lovers</title>
+  <title>Datamon GO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css" />
@@ -15,69 +15,72 @@
   <div id="root"></div>
 
   <div id="pokeHeader" class="header">
-      <img id="pokeLogo" class="logoStyle" src="images/LOGO.png" alt="logo">
-
-  </div>
-  <div id="upperBar" class="barraSup">
-    <nav class="barraNav">
-      <button id="pokeHomeBtn" class="pokeButtonNav">HOME</button>
-      <button id="pokeTypesBtn" class="pokeButtonNav">Tipo</button>
-      <button id="pokeWeakBtn" class="pokeButtonNav">Debilidades</button>
-      <button id="pokeAboutBtn" class="pokeButtonNav">Pokémon Go</button>
-      <input id="pokeSearch" class="pokeSearchStyle" type="text" placeholder="Buscar...">
-    </nav>
+    <img id="pokeLogo" class="logoStyle" src="images/LOGO.png" alt="logo">
   </div>
 
   <div id="homePage">
-    <div id="pokemonImageUp" class="pokeImageDiv">
-      <img id=pokePicFirst class="pokeImageFirstStyle" src="images/allPokemons.jpg" alt="allPokemons" width="900"
-        height="300">
-      <button id="elegirPokeBtn" class="pokeElegir">¡Busca el pokémon que necesitas!</button>
+    <div id="upperBar" class="barraSup">
+      <nav class="barraNav">
+        <button id="pokeHomeBtn" class="pokeButtonNav">HOME</button>
+        <button id="pokeTypesBtn" class="pokeButtonNav">Tipo</button>
+        <button id="pokeWeakBtn" class="pokeButtonNav">Debilidades</button>
+        <button id="pokeAboutBtn" class="pokeButtonNav">Pokémon Go</button>
+      </nav>
+      <input id="pokeSearch" class="pokeSearchStyle" type="text" placeholder="Buscar...">
     </div>
+
+    <div id="pokemonImageUp" class="pokeImageDiv">
+      <img id=pokePic1 class="pokeImageStyle" src="images/allPokemons2.png" alt="allPokemons">
+      <button id="elegirPokeBtn" class="pokeElegir">¡Descubre los pokémon de Kanto!</button>
+      <img id=pokePic2 class="pokeImageStyle" src="images/evolucion.png" alt="evolucion">
+      <button id="elegirPokeBtn2" class="pokeElegir">¡Conoce las evoluciones!</button>
+      <img id=pokePic3 class="pokeImageStyle" src="images/ranking.png" alt="ranking">
+    </div>
+    <button id="elegirPokeBtn3" class="pokeElegir">Ranking Pokémon</button>
   </div>
 
   <div id="secondPage">
+    <nav id="upperBar" class="barraNav">
+      <button id="pokeHomeBtn2" class="pokeButtonNav">HOME</button>
+      <select id="select1">
+        <option value="">Filtrar por tipo</option>
+        <option value="Water">Agua</option>
+        <option value="Bug">Bicho</option>
+        <option value="Dragon">Dragón</option>
+        <option value="Electric">Eléctrico</option>
+        <option value="Ghost">Fantasma</option>
+        <option value="Fire">Fuego</option>
+        <option value="Ice">Hielo</option>
+        <option value="Normal">Normal</option>
+        <option value="Fighting">Lucha</option>
+        <option value="Grass">Planta</option>
+        <option value="Psychic">Psíquicos</option>
+        <option value="Rock">Roca</option>
+        <option value="Ground">Tierra</option>
+        <option value="Poison">Veneno</option>
+        <option value="Flying">Volador</option>
+      </select>
 
-    <select id="select1">
-      <option value="">Filtrar por tipo</option>
-      <option value="Water">Agua</option>
-      <option value="Bug">Bicho</option>
-      <option value="Dragon">Dragón</option>
-      <option value="Electric">Eléctrico</option>
-      <option value="Ghost">Fantasma</option>
-      <option value="Fire">Fuego</option>
-      <option value="Ice">Hielo</option>
-      <option value="Normal">Normal</option>
-      <option value="Fighting">Lucha</option>
-      <option value="Grass">Planta</option>
-      <option value="Psychic">Psíquicos</option>
-      <option value="Rock">Roca</option>
-      <option value="Ground">Tierra</option>
-      <option value="Poison">Veneno</option>
-      <option value="Flying">Volador</option>
-    </select>
+      <select name="names" id="select2">
+        <option value="">Ordenar por nombre</option>
+        <option value="aToZ">De la A a la Z</option>
+        <option value="zToA">De la Z a la A</option>
+      </select>
 
-
-    <select name="names" id="select2">
-      <option value="">Ordenar por nombre</option>
-      <option value="aToZ">De la A a la Z</option>
-      <option value="zToA">De la Z a la A</option>
-    </select>
-
-    <select name="number" id="select3">
-      <option value="">Ordenar por N°</option>
-      <option value="mayorMenor">De mayor a menor</option>
-      <option value="menorMayor">De menor a mayor</option>
-    </select>
-
-    <div id="allPokemons">
-      <section id="contentOfCards"></section>
-    </div>
-    
-    <div id="container"></div>
+      <select name="number" id="select3">
+        <option value="">Ordenar por N°</option>
+        <option value="mayorMenor">De mayor a menor</option>
+        <option value="menorMayor">De menor a mayor</option>
+      </select>
+    </nav>
+    <input id="pokeSearch" class="pokeSearchStyle" type="text" placeholder="Buscar...">
+    <section id="contentOfCards"></section>
   </div>
 
-  <!--Barra superior-->
+  <footer>
+    <div id="pokeFooter" class="footer"></div></footer>
+
+
 
   <script type="module" src="main.js"></script>
   <script type="module" src="data.js"></script>
