Mejoras de CSS y corriendo filtrado y orden

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
     <div id="pokemonImageUp" class="pokeImageDiv">
       <img id=pokePic1 class="pokeImageStyle" src="images/allPokemons2.png" alt="allPokemons">
-      <button id="elegirPokeBtn" class="pokeElegir">¡Descubre los pokémon de Kanto!</button>
+      <button id="elegirPokeBtn" class="pokeElegir">¡Descubre acá los pokémon de Kanto!</button>
       <img id=pokePic2 class="pokeImageStyle" src="images/evolucion.png" alt="evolucion">
       <button id="elegirPokeBtn2" class="pokeElegir">¡Conoce las evoluciones!</button>
       <img id=pokePic3 class="pokeImageStyle" src="images/ranking.png" alt="ranking">
