README y tests de funciones listas, 1 describe listo!

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <button id="elegirPokeBtn2" class="pokeElegir">¡Conoce las evoluciones!</button>
       <img id=pokePic3 class="pokeImageStyle" src="images/ranking.png" alt="ranking">
     </div>
-    <button id="elegirPokeBtn3" class="pokeElegir">Ranking Pokémon</button>
+    <button id="elegirPokeBtn3" class="pokeElegir">Ranking pokémon</button>
   </div>
 
   <div id="secondPage">
