Trabajando con ventana modal

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <div id="secondPage">
-    <nav id="upperBar" class="pokeButtonNav">
+    <nav class="barraNav2">
       <button id="pokeHomeBtn2" class="pokeButtonNav">HOME</button>
       <select id="select1">
         <option value="">Filtrar por tipo</option>
@@ -50,7 +50,7 @@
         <option value="Electric">Eléctrico</option>
         <option value="Ghost">Fantasma</option>
         <option value="Fire">Fuego</option>
-        
+
         <option value="Ice">Hielo</option>
         <option value="Normal">Normal</option>
         <option value="Fighting">Lucha</option>
@@ -73,12 +73,16 @@
         <option value="mayorMenor">De mayor a menor</option>
         <option value="menorMayor">De menor a mayor</option>
       </select>
+
     </nav>
     <input id="pokeSearchSecond" class="pokeSearchStyle" type="text" placeholder="Buscar...">
     <section id="contentOfCards"></section>
+    <section id="modal"></section>
   </div>
 
-  <footer><div id="pokeFooter" class="footer"></div></footer>
+  <footer>
+    <div id="pokeFooter" class="footer"></div>
+  </footer>
 
 
 
